<resources>
    <string name="app_name">LQ Activator</string>
    <string name="item_exit">Exit</string>
    <string name="title_activation">Activation</string>
    <string name="title_info">Info</string>
    <string name="title_installation">Installation</string>
    <string name="btn_launch">Launch</string>
    <string name="tv_lqmb">Liên Quân Mobile</string>
    <string name="btn_uninstall">Uninstall</string>
    <string name="tv_not_installed">LQMB was not installed.</string>
    <string name="toast_not_enough">Your free space in this device is not enough to install, this needs more than 900MB. Current:\u0020</string>
    <string name="btn_not_installed">Not Installed</string>
    <string name="rationale_message">This app needs Phone and Storage permissions.</string>
    <string name="denied_message"><![CDATA[If you reject permission, you can not use this function. Please turn on permissions at [Setting] > [Permission]]]></string>
    <string name="btn_go_settings">Go Settings</string>
    <string name="toast_perm_denied">Permission Denied</string>
    <string name="btn_install">Install</string>
    <string name="tv_copying_data">Copying Hacked Data…</string>
    <string name="tv_hacking_map">Hacking Map And Anti-ban…</string>
    <string name="tv_done">Done!</string>
    <string name="tv_install_lqmb">Installing LQMB…</string>
    <string name="tv_not_hacked">This Game Is Not Hacked.</string>
    <string name="tv_hacked">Hack Completed, Let\'s Active Code And Enjoy This Game!</string>
    <string name="toast_grant_install">Grant to install</string>
    <string name="tv_searching_file">Searching For \"lqmb.zic\"…</string>
    <string name="tv_not_found">File \"lqmb.zic\" Was Not Found. Please Download It And Retry.</string>
    <string name="toast_key_copied">ZKey Copied.</string>
    <string name="tv_not_activated">Not authorized! Pull to reload.</string>
    <string name="tv_join_group">Join our FB Hack Map group: https://www.facebook.com/groups/292094057881113</string>
    <string name="tv_activated">Activated, Have fun!</string>
    <string name="toast_check_internet">Please check your internet connection!</string>
    <string name="ad_unit_banner" translatable="false">ca-app-pub-1603834578752860/1950034830</string>
    <string name="ad_unit_interstitial" translatable="false">ca-app-pub-1603834578752860/7577766031</string>
    <string name="btn_join">Join</string>
    <string name="btn_send">Send</string>
    <string name="tv_checking_md5">Checking MD5 Checksum…</string>
    <string name="item_send_log">Send Log</string>
    <string name="toast_not_install">Lien Quan Mobile was not installed!</string>
    <string name="tv_donate_team">Donate our team to help us make more hacks in the future!</string>
    <string name="btn_donate">Donate</string>
    <string name="toast_not_activated">Your ZKey was not activated!</string>
    <string name="item_contact">Contact author</string>
    <string name="toast_not_valid_version">This LQMB mod version is not valid, Please download the lastest LQMB mod version!</string>
    <string name="hint_card">Card number</string>
    <string name="hint_serial">Serial number</string>
    <string name="btn_pay">Pay</string>
    <string name="title_payment">Payment</string>
    <string name="dialog_content_processing">Processing...</string>
    <string name="tv_card_info">Chú ý: chỉ chấp nhận thẻ 50k để thanh toán!</string>
</resources>
