<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryLight"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgGameIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:text="@string/tv_lqmb"
            android:textColor="#8d6e63"
            android:textSize="30sp" />

        <Button
            android:id="@+id/btnUninstall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="0"
            android:background="@drawable/bg_btn_border"
            android:text="@string/btn_uninstall"
            android:textColor="#f44336" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnInstall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_install"
            android:textColor="@color/colorSecondaryText"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#f44336"
            android:textSize="20sp" />

        <com.rey.material.widget.ProgressView
            android:id="@+id/proviewInstall"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:visibility="gone"
            app:pv_autostart="true"
            app:pv_circular="true"
            app:pv_progressMode="indeterminate"
            app:pv_progressStyle="@style/Material.Drawable.CircularProgress" />

    </LinearLayout>


</LinearLayout>