<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            card_view:cardBackgroundColor="@color/colorPrimaryLight"
            card_view:cardCornerRadius="6dp"
            card_view:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvFbGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tv_join_group"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnJoin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorAccent"
                    android:text="@string/btn_join"
                    android:textSize="14sp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            card_view:cardBackgroundColor="@color/colorPrimaryLight"
            card_view:cardCornerRadius="6dp"
            card_view:contentPadding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvDonate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/tv_donate_team"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="20sp" />

                <Button
                    android:id="@+id/btnDonate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorAccent"
                    android:text="@string/btn_donate"
                    android:textSize="14sp" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>

