<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cvKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                card_view:cardCornerRadius="6dp"
                card_view:contentPadding="16dp">

                <TextView
                    android:id="@+id/tvKey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textColor="#f44336"
                    android:textSize="20sp" />
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                card_view:cardBackgroundColor="@color/colorPrimaryLight"
                card_view:cardCornerRadius="6dp"
                card_view:contentPadding="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvInstruction"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/app_name"
                        android:textColor="@color/colorSecondaryText"
                        android:textSize="20sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="16dp"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <ImageView
                            android:id="@+id/ivFacebook1"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center"
                            android:layout_marginEnd="24dp"
                            android:layout_marginRight="24dp"
                            android:src="@mipmap/ic_launcher_round" />

                        <ImageView
                            android:id="@+id/ivFacebook2"
                            android:layout_width="64dp"
                            android:layout_height="64dp"
                            android:layout_gravity="center"
                            android:src="@mipmap/ic_launcher_round" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="8dp">

                        <Button
                            android:id="@+id/btnSend1"
                            style="?android:attr/buttonBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="8dp"
                            android:layout_marginRight="8dp"
                            android:background="@color/colorAccent"
                            android:text="@string/btn_send"
                            android:textSize="14sp" />

                        <Button
                            android:id="@+id/btnSend2"
                            style="?android:attr/buttonBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@color/colorAccent"
                            android:text="@string/btn_send"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <Button
                android:id="@+id/btnLaunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="48dp"
                android:layout_marginTop="16dp"
                android:text="@string/btn_launch"
                android:textColor="#f44336"
                android:textSize="25sp" />

        </LinearLayout>
    </ScrollView>
</android.support.v4.widget.SwipeRefreshLayout>
